# nb2md

./: README.md  pyproject.toml
src/nb2md/: __init__.py  converter.py
