[project]
name = "nb2md"
version = "0.3.0"
description = "Converts ipynb file to markdown"
readme = "README.md"
authors = [
    { name = "sarin", email = "sarin.c.jacob2001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
]

[project.scripts]
nb2md = "nb2md.converter:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
